tests/fixtures/invalid/multi/bad_name_import/src/bad_name_import/main.gcl
// `helper` defines `x`, not `nonexistent`.
// Expected diagnostic: M003 name not found in imported file.
import bad_name_import.helper.{ nonexistent };

param y: Dimensionless = 1.0;
